Fixed margins and navigation styling on mobile.

--- a/styles/global.css
+++ b/styles/global.css
@@ -52,6 +52,14 @@ img {
   font-size: 1.6rem;
   line-height: 1.4;
   font-weight: 900;
+  color: #142744;
+  border-radius: 10px;
+  padding: 10px;
+  transition: 0.5s ease-in-out;
+}
+
+.siteTitle:hover {
+  background-color: #80808014;
 }
 
 footer {
