--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -108,7 +108,6 @@
     .fullWidthGrid {
       overflow: hidden;
       padding: 1em;
-      margin-top: 100px;
     }
     .shiftedImage {
       right: 0px;
@@ -120,6 +119,10 @@
     #navbarMobile {
       display: flex;
       flex-direction: column;
+    }
+    #navbarMobile a {
+      color: inherit;
+      text-decoration: none;
     }
   }
 
